[gd_scene load_steps=18 format=2]

[ext_resource path="res://SFX/Raining Bits.ogg" type="AudioStream" id=1]
[ext_resource path="res://scene/worldsscene.gd" type="Script" id=2]
[ext_resource path="res://Blender Assests/sun.obj" type="ArrayMesh" id=3]
[ext_resource path="res://SFX/Boss Battle.wav" type="AudioStream" id=4]
[ext_resource path="res://font/pdark.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scene/Control.gd" type="Script" id=6]

[sub_resource type="Environment" id=10]
background_mode = 1
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.234482, 0.983456, 0.911478 )

[sub_resource type="ConvexPolygonShape" id=9]
points = PoolVector3Array( 0, 0, 3.70069, -2.17527, 0, 2.99359, -1.02321, -1.65546, 3.1479, 0.972222, -1.94598, 2.99359, 2.17458, 0, 2.99359, 1.02252, 1.65473, 3.1479, -0.972911, 1.94525, 2.99359, -3.51957, 0, 1.14324, -2.54735, -1.94598, 1.84962, -2.67826, 1.65473, 1.94525, -0.601524, -3.14863, 1.84962, 1.57375, -3.14863, 1.14324, 2.67757, -1.65546, 1.94525, 3.51957, 0, 1.14324, 2.54666, 1.94525, 1.84962, 0.600834, 3.1479, 1.84962, -1.57443, 3.1479, 1.14324, -3.14818, 1.94525, 0, -3.51957, 0, -1.14397, -3.3101, -1.65546, 0, -1.94582, -3.14863, 0, 0, -3.70069, 0, 1.57375, -3.14863, -1.14397, 3.14749, -1.94598, 0, 3.30941, 1.65473, 0, 3.51957, 0, -1.14397, 1.94513, 3.1479, 0, 0, 3.70069, 0, -1.57443, 3.1479, -1.14397, -2.67826, 1.65473, -1.94598, -2.17527, 0, -2.99431, -2.54735, -1.94598, -1.85034, -0.601524, -3.14863, -1.85034, 0.972222, -1.94598, -2.99431, 2.67757, -1.65546, -1.94598, 2.54666, 1.94525, -1.85034, 2.17458, 0, -2.99431, 0.600834, 3.1479, -1.85034, -0.972911, 1.94525, -2.99431, 0, 0, -3.70069, -1.02321, -1.65546, -3.14863, 1.02252, 1.65473, -3.14863 )

[sub_resource type="BoxShape" id=5]

[sub_resource type="ParticlesMaterial" id=3]

[sub_resource type="CubeMesh" id=4]

[sub_resource type="GDScript" id=6]
script/source = "extends Area


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Replace with function body.
"

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 30, 30, 30 )
spread = 45.95
linear_accel = 3.67

[sub_resource type="CubeMesh" id=12]
size = Vector3( 0.1, 0.1, 0.1 )

[node name="Spatial3" type="Spatial"]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[node name="worldSpawns" type="KinematicBody" parent="."]
transform = Transform( -1, 8.74228e-08, 0, 8.74228e-08, 1, 8.74228e-08, 7.64274e-15, 8.74228e-08, -1, 0, 0, 0 )

[node name="firstspawner6" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -1.82959e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 279.305, -2.44176e-05, -8.82419e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner6"]
shape = SubResource( 1 )

[node name="firstspawner7" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -1.69407e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 314.693, -2.75113e-05, -8.28471e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner7"]
shape = SubResource( 1 )

[node name="firstspawner8" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -1.49078e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 348.512, -3.04679e-05, -7.66042e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner8"]
shape = SubResource( 1 )

[node name="firstspawner9" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -1.35525e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 389.569, -3.40572e-05, -1.03949e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner9"]
shape = SubResource( 1 )

[node name="firstspawner10" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -1.21973e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 433.887, -3.79317e-05, -1.32972e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner10"]
shape = SubResource( 1 )

[node name="firstspawner16" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -1.0842e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 414.69, -3.62534e-05, -8.75939e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner16"]
shape = SubResource( 1 )

[node name="firstspawner17" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -9.48677e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 404.181, -3.53347e-05, -7.49023e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner17"]
shape = SubResource( 1 )

[node name="firstspawner18" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -7.45389e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 377.806, -3.3029e-05, -4.81781e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner18"]
shape = SubResource( 1 )

[node name="firstspawner19" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -6.09864e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 474.988, -4.15248e-05, -4.24048e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner19"]
shape = SubResource( 1 )

[node name="firstspawner20" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -4.74338e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 535.503, -4.68152e-05, -3.30891e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner20"]
shape = SubResource( 1 )

[node name="firstspawner21" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -3.38813e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 508.97, -4.44956e-05, -1.84884e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner21"]
shape = SubResource( 1 )

[node name="firstspawner22" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -2.03288e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 490.999, -4.29246e-05, 1.43785e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner22"]
shape = SubResource( 1 )

[node name="firstspawner23" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -6.77626e-21, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 560.313, -4.89842e-05, 2.016e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner23"]
shape = SubResource( 1 )

[node name="firstspawner24" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 6.77626e-21, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 597.537, -5.22385e-05, 7.48412e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner24"]
shape = SubResource( 1 )

[node name="firstspawner25" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 2.03288e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 577.436, -5.04812e-05, 1.49954e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner25"]
shape = SubResource( 1 )

[node name="firstspawner26" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 3.38813e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 454.797, -3.97597e-05, 2.19618e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner26"]
shape = SubResource( 1 )

[node name="firstspawner27" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 4.74338e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 623.015, -5.44658e-05, 1.18299e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner27"]
shape = SubResource( 1 )

[node name="firstspawner28" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 6.09864e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 654.223, -5.71941e-05, 1.15362e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner28"]
shape = SubResource( 1 )

[node name="firstspawner29" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 8.13152e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 637.833, -5.57612e-05, 2.00999e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner29"]
shape = SubResource( 1 )

[node name="firstspawner30" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 3.38813e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 820.16, -7.17008e-05, 2.00733e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner30"]
shape = SubResource( 1 )

[node name="firstspawner31" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 4.74338e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 800.059, -6.99435e-05, 9.26812e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner31"]
shape = SubResource( 1 )

[node name="firstspawner32" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 6.09864e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 677.42, -5.9222e-05, 2.03492e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner32"]
shape = SubResource( 1 )

[node name="firstspawner33" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 7.45389e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 845.638, -7.39281e-05, 1.15828e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner33"]
shape = SubResource( 1 )

[node name="firstspawner34" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 8.80914e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 876.846, -7.66564e-05, 2.2292e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner34"]
shape = SubResource( 1 )

[node name="firstspawner35" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 1.0842e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 860.456, -7.52236e-05, 2.37787e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner35"]
shape = SubResource( 1 )

[node name="firstspawner36" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 5.42101e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 757.535, -6.62259e-05, 5.61733e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner36"]
shape = SubResource( 1 )

[node name="firstspawner37" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 8.13152e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 737.434, -6.44686e-05, 9.5041e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner37"]
shape = SubResource( 1 )

[node name="firstspawner38" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 9.48677e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 614.795, -5.37472e-05, 3.29566e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner38"]
shape = SubResource( 1 )

[node name="firstspawner39" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 1.0842e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 783.013, -6.84532e-05, 5.37251e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner39"]
shape = SubResource( 1 )

[node name="firstspawner40" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 1.21973e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 814.221, -7.11816e-05, 4.78303e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner40"]
shape = SubResource( 1 )

[node name="firstspawner41" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 1.42302e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 797.831, -6.97487e-05, 5.20354e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner41"]
shape = SubResource( 1 )

[node name="firstspawner42" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 8.80914e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 1087.91, -9.51086e-05, -1.49723e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner42"]
shape = SubResource( 1 )

[node name="firstspawner43" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 1.01644e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 1067.81, -9.33513e-05, 2.64819e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner43"]
shape = SubResource( 1 )

[node name="firstspawner44" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 1.15196e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 945.174, -8.26298e-05, 2.20843e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner44"]
shape = SubResource( 1 )

[node name="firstspawner45" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 1.28749e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 1113.39, -9.73359e-05, 7.84995e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner45"]
shape = SubResource( 1 )

[node name="firstspawner46" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 1.42302e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 1144.6, -0.000100064, 3.31521e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner46"]
shape = SubResource( 1 )

[node name="firstspawner47" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 1.49078e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 1128.21, -9.86314e-05, 4.09114e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner47"]
shape = SubResource( 1 )

[node name="firstspawner15" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 5.42101e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 1551.36, -0.775801, -0.155212 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner15"]
shape = SubResource( 1 )

[node name="firstspawner11" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -1.0842e-19, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 459.469, -4.01681e-05, -1.22945e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner11"]
transform = Transform( 10, 6.68149e-21, -1.69407e-21, 6.68148e-21, 10, 0, -6.77626e-21, 0, 1, 0.798458, -6.98042e-08, -2.1368e-20 )
shape = SubResource( 1 )

[node name="firstspawner12" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -6.09864e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 33.1088, -2.89447e-06, 1.30631e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner12"]
transform = Transform( 10, 6.68149e-21, -1.69407e-21, 6.68148e-21, 10, 0, -6.77626e-21, 0, 1, 0.798458, -6.98042e-08, -2.1368e-20 )
shape = SubResource( 1 )

[node name="firstspawner13" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -4.74338e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 97.377, -8.51297e-06, 1.02127e-18 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner13"]
transform = Transform( 10, 6.68149e-21, -1.69407e-21, 6.68148e-21, 10, 0, -6.77626e-21, 0, 1, 0.798458, -6.98042e-08, -2.1368e-20 )
shape = SubResource( 1 )

[node name="firstspawner14" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -3.38813e-20, 6.68148e-21, 10, 0, 2.1684e-19, 0, 10, 173.416, -1.51605e-05, 7.76478e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner14"]
transform = Transform( 10, 6.68149e-21, -1.69407e-21, 6.68148e-21, 10, 0, -6.77626e-21, 0, 1, 0.798458, -6.98042e-08, -2.1368e-20 )
shape = SubResource( 1 )

[node name="firstspawner5" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, -6.09864e-20, 6.68149e-21, 10, 0, 1.0842e-19, 0, 10, 240.39, 0.0806484, -0.0410499 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner5"]
shape = SubResource( 1 )

[node name="firstspawner4" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 0, 6.68149e-21, 10, 0, 5.42101e-20, 0, 10, 200.247, -1.75061e-05, -6.99686e-19 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner4"]
shape = SubResource( 1 )

[node name="firstspawner2" type="Area" parent="worldSpawns"]
transform = Transform( 100, 6.6815e-20, 0, 6.68149e-20, 100, 0, 3.25261e-19, 0, 1, 63.3691, 7.22074, -1.12382e-06 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner2"]
shape = SubResource( 1 )

[node name="firstspawner3" type="Area" parent="worldSpawns"]
transform = Transform( 100, 6.6815e-20, 0, 6.6815e-20, 100, 0, 1.0842e-19, 0, 1, 140.536, 20.0758, 1.13687e-13 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner3"]
shape = SubResource( 1 )

[node name="firstspawner" type="Area" parent="worldSpawns"]
transform = Transform( 10, 6.6815e-21, 0, 6.6815e-21, 10, 0, 0, 0, 1, 18.1532, 1.82507, 0 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns/firstspawner"]
shape = SubResource( 1 )

[node name="sun" type="KinematicBody" parent="worldSpawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.71575, 15.0718, 12.4304 )
axis_lock_motion_x = true
move_lock_x = true

[node name="CollisionShape2" type="CollisionShape" parent="worldSpawns/sun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.34142, -17.0154, -15.064 )
shape = SubResource( 9 )

[node name="sun" type="MeshInstance" parent="worldSpawns/sun/CollisionShape2"]
layers = 2
mesh = ExtResource( 3 )
skeleton = NodePath("../..")
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="worldSpawns/sun"]
transform = Transform( -0.13982, -0.93744, 0.318836, -0.376487, 0.348147, 0.858517, -0.91581, 0, -0.401612, -8.341, -11.3356, -15.064 )

[node name="CollisionShape" type="CollisionShape" parent="worldSpawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16.8795, 0 )
shape = SubResource( 5 )

[node name="firstspawner" type="Area" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 1, 18.1532, 1.82507, 0 )

[node name="KinematicBody" type="KinematicBody" parent="."]

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( -4.37114e-08, -1, 0, -1, 4.37114e-08, 8.74228e-08, -8.74228e-08, 3.82137e-15, -1, 4.08841, 0, -26.2397 )
visible = false
light_color = Color( 0, 0, 0, 1 )
spot_range = 62.2
spot_angle = 72.3

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.67484, 0 )
visible = false
amount = 500
lifetime = 1.04
speed_scale = 1.2
visibility_aabb = AABB( -49.4444, -25.2846, -7.16898, 99.8751, 50.5692, 14.5538 )
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 4 )

[node name="levelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="bossSpawner" type="Area" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 1, 110, 1.825, 0 )
script = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="bossSpawner"]
shape = SubResource( 1 )

[node name="bossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
margin_top = 8.0
margin_right = 1024.0
margin_bottom = 64.0
script = ExtResource( 6 )

[node name="points" type="RichTextLabel" parent="HUD/Control"]
margin_left = 704.0
margin_top = 8.0
margin_right = 928.0
margin_bottom = 72.0
custom_fonts/normal_font = SubResource( 7 )
text = "Points:"

[node name="timer" type="RichTextLabel" parent="HUD/Control"]
margin_left = 80.0
margin_top = 8.0
margin_right = 240.0
margin_bottom = 48.0
custom_fonts/normal_font = SubResource( 8 )
text = "Timer: "

[node name="Particles2" type="Particles" parent="."]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -143.03, 0, 0 )
amount = 500
lifetime = 20.64
speed_scale = 0.5
randomness = 0.17
visibility_aabb = AABB( -110.609, -183.795, -4, 221.218, 367.59, 8 )
process_material = SubResource( 11 )
draw_pass_1 = SubResource( 12 )

[connection signal="body_entered" from="worldSpawns/firstspawner6" to="." method="_on_firstspawner6_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner7" to="." method="_on_firstspawner7_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner8" to="." method="_on_firstspawner8_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner9" to="." method="_on_firstspawner9_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner10" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner16" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner17" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner18" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner19" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner20" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner21" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner22" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner23" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner24" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner25" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner26" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner27" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner28" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner29" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner30" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner31" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner32" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner33" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner34" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner35" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner36" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner37" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner38" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner39" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner40" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner41" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner42" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner43" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner44" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner45" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner46" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner47" to="." method="_on_firstspawner10_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner15" to="." method="_on_firstspawner15_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner11" to="." method="_on_firstspawner11_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner12" to="." method="_on_firstspawner11_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner13" to="." method="_on_firstspawner11_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner14" to="." method="_on_firstspawner11_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner5" to="." method="_on_firstspawner4_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner4" to="." method="_on_firstspawner4_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner2" to="." method="_on_firstspawner2_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner3" to="." method="_on_firstspawner3_body_entered"]
[connection signal="body_entered" from="worldSpawns/firstspawner" to="." method="_on_firstspawner_body_entered"]
[connection signal="body_shape_entered" from="bossSpawner" to="." method="_on_bossSpawner_body_shape_entered"]
